# klyster

./: .dockerignore  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  STATELESS_VERIFICATION.md  agent.example.toml  docker-compose.override.yml  docker-compose.yml  fix_clippy.sh  index.html  index.yaml  klyster-0.1.0.tgz  klyster-0.1.1.tgz  klyster-0.1.2.tgz  klyster-0.1.4.tgz  klyster-0.1.5.tgz  klyster-0.1.6.tgz  klyster-0.1.7.tgz  klyster-0.1.8.tgz  klyster-0.1.9.tgz  klyster.docker.toml  klyster.example.toml  klyster.postgres.toml
.github/workflows/: docker.yml  helm-release.yml  helm.yml  release.yml  test.yml
analytics_server/: .gitignore  Makefile  __main__.py  requirements.txt  server.py
analytics_server/tests/: test_server.py
crates/agent/src/: lib.rs
crates/analytics/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 00000000000000_init.sql  20260523000002_resources_schema.sql  20260523000003_forecasts_schema.sql  20260523000004_analytics_functions_schema.sql
crates/db/src/: error.rs  lib.rs  migrate.rs
crates/db/src/repositories/: analytics_function_repo.rs  mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: config.rs  lib.rs  logging.rs  shutdown.rs
crates/domain/src/models/: analytics.rs  mod.rs  resource.rs
crates/klyster/: Cargo.toml
crates/klyster/src/: bootstrap.rs  cli.rs  main.rs
crates/web/: Cargo.toml
crates/web/src/: error.rs  lib.rs  server.rs  state.rs
crates/web/src/dto/: analytics.rs  forecasts.rs  mod.rs  resource_groups.rs  sources.rs
crates/web/src/extractors/: mod.rs
crates/web/src/middleware/: apm.rs  rate_limit.rs
crates/web/src/routes/: health.rs  metrics.rs  mod.rs  resource_groups.rs  sources.rs  ws.rs
deploy/helm/klyster/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
deploy/helm/klyster/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  tests-test-connection.yaml
docker/: entrypoint.sh  prometheus.yml
docker/grafana/provisioning/datasources/: datasources.yml
proto/: analytics.proto
scripts/: build-tarball.sh  generate-changelog.sh
svcs/agent/: Cargo.toml
svcs/agent/src/: auth.rs  lib.rs  server.rs
svcs/agent/src/collector/: mod.rs  system.rs  trait_def.rs
svcs/agent/src/prometheus/: adapter.rs  client.rs  collector.rs  discovery.rs  health.rs  mod.rs  query_builder.rs
svcs/agent/src/server/: routes.rs
svcs/agent/src/server/routes/: metrics.rs
svcs/agent/tests/: prometheus_adapter_test.rs
svcs/analytics/: Cargo.toml  build.rs
svcs/analytics/src/: circuit_breaker.rs  client.rs  error.rs  forecast_handler.rs  lib.rs  process.rs  resilient_client.rs  runtime.rs  serialization.rs  supervisor.rs
svcs/analytics/tests/: client_test.rs  end_to_end_test.rs  resilient_client_test.rs  supervisor_test.rs
svcs/analytics_server/: Makefile  __init__.py  service.py
svcs/db/: Cargo.toml
svcs/db/migrations/: 20260523000001_metrics_schema.sql  20260603000001_agent_api_keys.sql  20260606000001_add_daemonset_resource_kind.sql
svcs/db/src/: error.rs  lib.rs  migrate.rs  pool.rs
svcs/db/src/repositories/: analytics_function_repo.rs  forecast_repo.rs  metric_repo.rs  metric_source_repo.rs  resource_repo.rs
svcs/domain/: Cargo.toml
svcs/domain/src/: config.rs  lib.rs  recommendation_engine.rs  shutdown.rs
svcs/domain/src/k8s/: client.rs  discovery.rs  mod.rs  watcher.rs
svcs/domain/src/models/: analytics.rs  forecast.rs  metric.rs  resource.rs
svcs/domain/src/provider/: kubernetes.rs  mod.rs  trait.rs
svcs/klyster/: Cargo.toml
svcs/klyster/src/: bootstrap.rs  cli.rs  main.rs  test_prometheus.rs
svcs/seer/: Makefile  __init__.py  __main__.py  _sandbox_runner.py  requirements.runtime.txt  requirements.txt  sandbox.py  serialization.py  server.py  service.py  validator.py
svcs/seer/functions/: __init__.py  arima.py  linear_regression.py  seasonal_decomposition.py  threshold_rules.py  types.py
svcs/seer/tests/: test_arima.py  test_integration.py  test_linear_regression.py  test_sandbox.py  test_seasonal_decomposition.py  test_serialization.py  test_service.py  test_threshold_rules.py
svcs/web/: .gitignore  Cargo.toml  build.rs  package.json  tailwind.config.js
svcs/web/src/: docs.rs  error.rs  lib.rs  metrics.rs  server.rs  state.rs  static_files.rs
svcs/web/src/dto/: analytics.rs  forecasts.rs  metrics.rs  mod.rs  resource_groups.rs  sources.rs
svcs/web/src/extractors/: pagination.rs  validated.rs
svcs/web/src/middleware/: apm.rs  logging.rs  mod.rs  rate_limit.rs
svcs/web/src/routes/: analytics.rs  config.rs  forecasts.rs  health.rs  metrics.rs  recommendations.rs  resource_groups.rs  sources.rs  ws.rs
svcs/web/static/: index.html
svcs/web/static/css/: styles.css
svcs/web/static/js/: analytics.js  app.js  dashboard.js  forecasts.js  recommendations.js  resources.js  sources.js  ui.js
ui/: .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.svelte  main.ts  vite-env.d.ts
ui/src/lib/: routes.ts
ui/src/lib/api/: client.ts  metrics.ts
ui/src/lib/components/: ErrorBoundary.svelte  Layout.svelte  LoadingIndicator.svelte  MetricCard.svelte  Sidebar.svelte  Skeleton.svelte  TimeSeriesChart.svelte  TopBar.svelte
ui/src/lib/stores/: theme.ts
ui/src/routes/: Analytics.svelte  Dashboard.svelte  Forecasts.svelte  NotFound.svelte  Recommendations.svelte  Resources.svelte  Settings.svelte
ui/src/styles/: app.css
