[workspace]
resolver = "2"
members = [
    "crates/klyster",
    "crates/domain",
    "crates/db",
    "crates/web",
    "crates/agent",
    "crates/analytics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/klyster/klyster"
authors = ["Klyster Contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
domain = { path = "crates/domain" }
db = { path = "crates/db" }
web = { path = "crates/web" }
agent = { path = "crates/agent" }
analytics = { path = "crates/analytics" }

anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util"] }
hyper = "1.4"
http = "1.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
