[package]
name = "db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Database access, migrations, and repositories for Klyster"

[lints]
workspace = true

[dependencies]
domain.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
tokio.workspace = true
