[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Domain models, configuration, and shared utilities for Klyster"

[lints]
workspace = true

[dependencies]
