[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Domain models, configuration, and shared utilities for Klyster"

[lints]
workspace = true

[dependencies]
config = "0.15.19"
num_cpus = "1.16"
serde.workspace = true
toml = "0.9.6"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.15"
serial_test = "3.0"
