[package]
name = "agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Metrics collection agent for Klyster"

[lints]
workspace = true

[dependencies]
domain.workspace = true
db.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# System metrics
sysinfo = "0.30"
hostname = "0.4"

# Prometheus client
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
