[package]
name = "analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Analytics orchestration and Python sidecar IPC for Klyster"

[lints]
workspace = true

[dependencies]
thiserror = "1.0"
tracing = "0.1"
