[package]
name = "analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Analytics orchestration and Python sidecar IPC for Klyster"

[lints]
workspace = true

[dependencies]
domain.workspace = true
chrono.workspace = true
thiserror = "1.0"
tracing = "0.1"
tonic = "0.12"
prost = "0.13"
tokio = { workspace = true }
tower = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
nix = { version = "0.29", features = ["signal"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
tempfile = "3.10"
