[package]
name = "web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HTTP API server for Klyster"

[lints]
workspace = true

[dependencies]
domain.workspace = true
db.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http.workspace = true
chrono.workspace = true
prometheus = "0.13"
lazy_static = "1.4"
uuid = { version = "1.6", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
mime_guess = "2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
